--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -183,9 +183,10 @@ jobs:
 
   contracts-deployment-testnet:
     needs: [contracts-build-and-test]
+    # TODO: Remove ` && github.ref != 'refs/heads/ci-dapp-dev-test'` befpre merge to main
     if: |
       github.event_name == 'workflow_dispatch'
-        && github.ref != 'refs/heads/dapp-development'
+        && github.ref != 'refs/heads/dapp-development' && github.ref != 'refs/heads/ci-dapp-dev-test'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -318,9 +319,10 @@ jobs:
   # `dapp-development`.
   contracts-dapp-development-deployment-testnet:
     needs: [contracts-build-and-test]
+    # TODO: Remove ` || github.ref == 'refs/heads/ci-dapp-dev-test'` before merge to main
     if: |
       github.event_name == 'workflow_dispatch'
-        && github.ref == 'refs/heads/dapp-development'
+        && (github.ref == 'refs/heads/dapp-development' || github.ref == 'refs/heads/ci-dapp-dev-test')
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -377,7 +379,8 @@ jobs:
         uses: ./.github/actions/docker-build-push
         with:
           environment: ${{ github.event.inputs.environment }}
-          imageName: keep-random-beacon-hardhat-dapp-dev
+          # TODO: remove `-wip` suffix before merge to main
+          imageName: keep-random-beacon-hardhat-dapp-dev-wip
           context: ./solidity/random-beacon
           push: true
           gcrJsonKey: ${{ secrets.KEEP_TEST_GCR_JSON_KEY }}
