--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -153,12 +153,12 @@ spec:
   ports:
     - port: 3919
       targetPort: 3919
-      name: tcp-3919
+      name: network
     - port: 9601
       targetPort: 9601
-      name: tcp-9601
+      name: metrics
     - port: 9701
       targetPort: 9701
-      name: tcp-9701
+      name: diagnostics
   selector: #@ labels()
 #@ end
