Expose 9601 and 9701 ports for client pod

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -56,6 +56,8 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 3919
+            - containerPort: 9601
+            - containerPort: 9701
           env:
             - name: KEEP_ETHEREUM_PASSWORD
               valueFrom:
