--- a/infrastructure/kube/keep-test/keep-client/gen/data.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/data.yaml
@@ -20,3 +20,8 @@ clients:
     networkPeers: /dns4/keep-client-7.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmNnbEQy4wi9KNoyoGh3nZy5urkbf5oUKrw69XmVrKeowd
   - id: 9
     networkPeers: /dns4/keep-client-8.default.svc.cluster.local/tcp/3919/ipfs/16Uiu2HAmCJ9iupUiWed9NmpsPG7W2EiccEceuDrKZuQe7mkyAQxv
+initContainers:
+  - name: initcontainer-beacon
+    image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+  - name: initcontainer-ecdsa
+    image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
