--- a/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
+++ b/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
@@ -91,7 +91,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-0
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-0-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -254,7 +294,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-1
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-1-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -417,7 +497,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-2
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-2-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -580,7 +700,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-3
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-3-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -743,7 +903,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-4
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-4-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -906,7 +1106,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-5
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-5-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -1069,7 +1309,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-6
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-6-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -1232,7 +1512,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-7
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-7-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -1395,7 +1715,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-8
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-8-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
@@ -1558,7 +1918,47 @@ spec:
         - --diagnostics.port
         - "9701"
       initContainers:
-      - name: initcontainer
+      - name: initcontainer-beacon
+        image: gcr.io/keep-test-f3e0/keep-random-beacon-hardhat:latest
+        imagePullPolicy: Always
+        env:
+        - name: CHAIN_API_URL
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: http-url
+        - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-network-goerli
+              key: contract-owner-eth-account-private-key
+        - name: KEEP_CLIENT_ETH_PRIVATE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: eth-account-privatekeys
+              key: account-9
+        - name: ACCOUNTS_PRIVATE_KEYS
+          value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+        - name: KEEP_CLIENT_ETH_ADDRESS
+          valueFrom:
+            configMapKeyRef:
+              name: eth-account-info
+              key: account-9-address
+        args:
+        - initialize
+        - --network
+        - goerli
+        - --owner
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --provider
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --operator
+        - $(KEEP_CLIENT_ETH_ADDRESS)
+        - --amount
+        - "800000"
+        - --authorization
+        - "800000"
+      - name: initcontainer-ecdsa
         image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
         imagePullPolicy: Always
         env:
