Hardhat task to ensure accounts ether balances
We add a hardhat task that can be used to ensure addresses are funded
with a minimum value of ether. This will be used in test environments
setup to ensure when a client starts the operator has enough funds to
run.

Sample command:
```
npx hardhat ensure-eth-balance "0.5 ether" 0x6299496199d99941193Fdd2d717ef585F431eA05 0x93df7c54c41A9D7FB17C1E8039d387a2A924708c
```

--- a/solidity/random-beacon/tsconfig.json
+++ b/solidity/random-beacon/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "downlevelIteration": true
   }
 }
