Fix linting problems
Fixed the problems reported by the format task.
Added `"no-await-in-loop": "off"` to the main elisntrc as this rules is
often disabled by us.

We still need to solve quotes problems with https://github.com/thesis/eslint-config/pull/4

--- a/solidity/random-beacon/.eslintrc
+++ b/solidity/random-beacon/.eslintrc
@@ -16,6 +16,7 @@
         "groups": ["builtin", "external", "parent", "sibling", "index", "type"],
         "newlines-between": "always"
       }
-    ]
+    ],
+    "no-await-in-loop": "off"
   }
 }
