--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -47,7 +47,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@tenderly/hardhat-tenderly": "^1.0.12",
-    "@thesis-co/eslint-config": "github:thesis/eslint-config",
+    "@thesis-co/eslint-config": "github:thesis/eslint-config#v0.2.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.2.22",
