Added a delay between pre-parameters generation
There is a configurable delay between the generation of pre-parameters.
By default, the delay is 10 seconds. If pre-parameters generation takes a long
time and new parameters are generated one after another, all other client
processes are starved, without access to CPU. Adding a delay should help with
releasing some computing power for a moment.

--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -92,6 +92,7 @@ Port = 8081
 # [tbtc]
 # PreParamsPoolSize = 50
 # PreParamsGenerationTimeout = "2m"
+# PreParamsGenerationDelay = "10s"
 # PreParamsGenerationConcurrency = 1
 
 # Developer options to work with locally deployed contracts
