--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -172,6 +172,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Go format
-        uses: Jerome1337/gofmt-action@v1.0.4
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
+      - name: gofmt
+        run: gofmt -d -e .
