Use staticcheck for go formatting verification
staticcheck is a recommended tool after golint depracation.
See: https://github.com/golang/lint

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -2,7 +2,7 @@ name: Go
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   push:
     branches:
       - main
@@ -17,16 +17,16 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment for workflow execution'
+        description: "Environment for workflow execution"
         required: false
-        default: 'dev'
+        default: "dev"
       upstream_builds:
-        description: 'Upstream builds'
+        description: "Upstream builds"
         required: false
       upstream_ref:
-        description: 'Git reference to checkout (e.g. branch name)'
+        description: "Git reference to checkout (e.g. branch name)"
         required: false
-        default: 'main'
+        default: "main"
 
 jobs:
   client-detect-changes:
@@ -94,7 +94,7 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         uses: docker/build-push-action@v2
         env:
-          IMAGE_NAME: 'keep-client'
+          IMAGE_NAME: "keep-client"
         with:
           labels: revision=${{ github.sha }}
           push: false
@@ -111,7 +111,7 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         uses: docker/build-push-action@v2
         env:
-          IMAGE_NAME: 'keep-client'
+          IMAGE_NAME: "keep-client"
         with:
           # GCR image should be named according to following convention:
           # HOSTNAME/PROJECT-ID/IMAGE:TAG
@@ -172,8 +172,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version-file: "go.mod"
-      - name: gofmt
-        run: gofmt -d -e .
+      - uses: dominikh/staticcheck-action@v1
