Remove part of the testing configuration

--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -371,15 +371,13 @@ jobs:
       - name: Publish to npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        # TODO: remove `--dry-run` before merge to main
-        run: npm publish --access=public --tag dapp-development-${{ github.event.inputs.environment }} --network=${{ github.event.inputs.environment }} --dry-run
+        run: npm publish --access=public --tag dapp-development-${{ github.event.inputs.environment }} --network=${{ github.event.inputs.environment }}
 
       - name: Build and Publish Docker image
         uses: ./.github/actions/docker-build-push
         with:
           environment: ${{ github.event.inputs.environment }}
-          # TODO: remove `-wip` suffix before merge to main
-          imageName: keep-random-beacon-hardhat-dapp-dev-wip
+          imageName: keep-random-beacon-hardhat-dapp-dev
           context: ./solidity/random-beacon
           push: true
           gcrJsonKey: ${{ secrets.KEEP_TEST_GCR_JSON_KEY }}
